fix some classes